<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F8F5F5"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_height="match_parent"
    tools:context=".Exibir">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
  
        <!-- Valores Informados -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="201dp"
            app:cardCornerRadius="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/degrade_bg"
            android:padding="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:background="@drawable/degrade_bg"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderText"
                    android:text="@string/resutado" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtconsumogasolina"
                            style="@style/LabelTexto"
                            android:text="@string/relacaogasolina" />

                        <TextView
                            android:id="@+id/txtconsumoetanol"
                            style="@style/LabelTexto"
                            android:text="@string/gastoental" />

                        <TextView
                            android:id="@+id/txtvazio"
                            style="@style/LabelTexto"
                            android:text="@string/gastogasolina" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/porcentagem"
                            style="@style/LabelTexto"
                            android:text="0,00 \n"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/ethanol_preco"
                            style="@style/LabelTexto"
                            android:text="0,00 \n"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/gasolina_preco"
                            style="@style/LabelTexto"
                            android:layout_marginBottom="16dp"
                            android:text="0,00"
                            android:textAlignment="textEnd" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/formaabstecer"
                style="@style/ResultadoText"
                android:gravity="center"
                android:text="Abasteça com Gasolina" />

            <TextView
                android:id="@+id/ecomia"
                style="@style/LabelTexto"
                android:gravity="center"
                android:text="@string/economiade"
                android:textColor="#EE69AF21" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_voltar"
            style="@style/Btn"
            android:background="@drawable/btnapp"
            android:text="@string/btn_voltar" />

    </LinearLayout>

</LinearLayout>