<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_mapa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_weight="1"
    tools:context=".Calcular">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layoutcard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:padding="50dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        style="@style/HeaderText"
                        android:layout_height="wrap_content"
                        android:text="@string/tela_calculo_titulo_um"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        style="@style/LabelTexto"
                        android:text="@string/etanol_text"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/etanol_media"
                        style="@style/EditText"
                        android:hint="0,00"
                        android:scrollbarThumbHorizontal="@color/colorAccent"
                        android:scrollbarThumbVertical="@color/colorAccent"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorHint="@color/colorPrimary"
                        android:textColorLink="@color/colorAccent"
                        android:textCursorDrawable="@color/colorAccent" />

                    <TextView
                        style="@style/LabelTexto"
                        android:text="@string/gas_text"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/gasolina_media"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="0,00"
                        android:scrollbarThumbHorizontal="@color/colorAccent"
                        android:scrollbarThumbVertical="@color/colorAccent"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:baselineAligned="false"
                        android:gravity="center_horizontal|top"
                        android:orientation="horizontal"
                        android:padding="0dp">

                        <TextView
                            android:id="@+id/descoconsumo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tela_calculo_btn_pesquisar_veiculo"
                            android:textAlignment="gravity"
                            android:textAllCaps="false"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="22sp"
                            android:textStyle="bold">

                        </TextView>

                        <Button
                            android:id="@+id/consumo"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_search_24"
                            android:textColor="#1835F1" />
                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="18dp"
                android:background="@color/cor_texto"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="#fff"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="4dp">

                    <TextView
                        style="@style/HeaderText"
                        android:text="@string/tela_calculo_titulo_dois"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        style="@style/LabelTexto"
                        android:text="@string/etanol_text"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/etanol_preco"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="0,00"
                        android:scrollbarThumbHorizontal="@color/colorAccent"
                        android:scrollbarThumbVertical="@color/colorAccent"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorAccent" />

                    <TextView
                        style="@style/LabelTexto"
                        android:text="@string/gas_text"
                        android:textColor="@color/colorPrimaryDark" />

                    <EditText
                        android:id="@+id/gasolina_preco"
                        style="@style/EditText"
                        android:hint="0,00"
                        android:scrollbarThumbHorizontal="@color/colorAccent"
                        android:scrollbarThumbVertical="@color/colorAccent"
                        android:textColor="@color/colorPrimary"
                        android:textColorHighlight="@color/colorAccent"
                        android:textColorHint="@color/colorPrimary"
                        android:textCursorDrawable="@color/colorAccent" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_verificar"
                    style="@style/Btn"
                    android:background="@drawable/btnapp"
                    android:text="@string/calculator_button" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>